# cube-solver

./: .gitignore  LICENSE.txt  README.md  color.py  coord_cube.py  cubie_cube.py  edge.py  face_cube.py  facelet.py  noxfile.py  pyproject.toml  search.py  setup.py  solve.py  tools.py
.github/workflows/: ci.yml
twophase/: __init__.py  color.py  coord_cube.py  corner.py  cubie_cube.py  edge.py  face_cube.py  facelet.py  pieces.py  random.py  solve.py  tables.py  tools.py
twophase/cubes/: __init__.py  coordcube.py  cubiecube.py  facecube.py
