[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "twophase"
version = "0.1.0"
description = "Rubik's cube solver implementing Kociemba's two-phase algorithm."
authors = [ "tcbegley <tomcbegley@gmail.com>",]
license = "MIT"
classifiers = [ "Development Status :: 3 - Alpha", "License :: OSI Approved :: MIT License",]

[tool.poetry.dependencies]
python = "^3.6"

[tool.black]
line-length = 79
target-version = [ "py36" ]

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
